[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[profile.dev]
overflow-checks = false

[dependencies]
aho-corasick = "1.1.2"
hashbrown = "0.14.3"
itertools = "0.12.0"

# proc-macros
quote = "1.0.33"
syn = { version = "1.0.0", features = ["full"] }
