[package]
name = "aoc2023"
version = "0.1.0"
authors = ["math-queiroz"]
edition = "2021"
default-run = "aoc2023"

[lib]
name = "aoc"
proc-macro = true 

[profile.dev]
overflow-checks = false

[lints.clippy]
zero_prefixed_literal = "allow"
items_after_test_module = "allow"

[dependencies]
aho-corasick = "1.1.2"
hashbrown = "0.14.3"
itertools = "0.12.0"
z3 = "0.12.1"

# proc-macros
quote = "1.0.33"
syn = { version = "1.0.0", features = ["full"] }
